fix overlapping html

--- a/src/components/sideBar/style.css
+++ b/src/components/sideBar/style.css
@@ -264,8 +264,8 @@ body {
   color: #fff;
   text-shadow: 1px 2px 0px rgb(0 0 0 / 25%);
   position: fixed;
-  left: -3px;
-  width: 25px;
+  left: 10px;
+  width: 0px; 
   margin-top: 0em;
   writing-mode: vertical-lr !important;
   transform: rotate(90deg) !important;
